2.4.1:

2004-04-25  Murray Cumming  <murrayc@murrayc.com>

	* gdk/Makefile.am: install gdkmmconfig.h in a gdkmm-2.6 directory,
	instead of a gtkmm-2.6 directory. Bug #141045.

2004-04-23  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/uimanager.[hg|ccg]: add_ui_from_string now returns a 
	ui_merge_id instead of a guint, to make the API clearer. This is 
	technically an API change, but it's not a breaking one, and it's not
	an ABI change.

2004-04-22  Alexander Nedotsukov <bland@FreeBSD.org>

 	* atk/atkmm: Fixed private/ includes installation directory.

2004-04-17  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/optionmenu.hg, fileselection.hg, combo.hg: Mark them as 
	deprecated in the docs, by using the Doxygen @deprecated command.

2004-04-17  Murray Cumming  <murrayc@murrayc.com>

	* Removed some extra semi-colons detected by gcc 3.4 from cvs.

2.4.0:

2004-04-11  Murray Cumming  <murrayc@murrayc.com>

	* atk/src/: Added implementor.[hg|ccg] to wrap the AtkImplementorIface.
	* gtk/src/widget.hg: Widget inherits from the Implementor interface
	as well as Gtk::Object.

2004-04-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm.h: #include treemodelsort.h and treemodelfilter.h
	* gtk/src/menu.hg: popup(): Wrap the C callback as a Slot, so we do
	not need to include gtkmenu.h.
	* gtk/src/iconinfo.hg: Do not include gtkiconinfo.h.
	* gtk/src/notebook.hg: Do not include gtknotebook.h
	* gtk/src/stockitem.hg: Do not include gtkstockitem.h
	* gtk/src/texttag.hg: Do not include gtktexttag.h

2004-04-09  Murray Cumming  <murrayc@murrayc.com>

	* toolbar.hg: Added get_tooltips_object() accessor, which should let
	us set tooltips on toolbar objects.

2004-04-09  Murray Cumming  <murrayc@murrayc.com>

	* filefilter.hg: Create a FileFilter::Info class to use in place of
	GtkFileFilterInfo, in the add_custom() callbak . Removed filter(), 
	because it is not needed and because it is difficult to wrap.

2004-04-08  Bryan Forbes  <bryan@reigndropsfall.net>
