@@ -1,3 +1,10 @@
+2004-05-14  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/gtkmm/comboboxtext.cc, comboboxentrytext.cc: get_active_text():
+	The iterator was being used in ways that probably should not compile.
+	This leads to strange results in other situations, so it is best to fix
+	it.
+
 2.4.1:
 
 2004-04-25  Murray Cumming  <murrayc@murrayc.com>
